--- a/main.html
+++ b/main.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Suleiman</title>
+    <link rel="icon" type="image/x-icon" href="/img/190379988.jpeg">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -13,34 +14,50 @@
 
 <body>
     <header class="headerp">
-        <div class="logo"><a href="#">Suleiman</a></div>
+        <div class="logo"><a href="#home">Suleiman</a></div>
         <div class="nav">
-            <a href="#">Home</a>
-            <a href="#projects">Projects</a>
-            <a href="#skills">Skills</a>
-            <a href="#">ContactMe</a>
-            <a href="#">Extras</a>
+            <nav class="navbar navbar-expand-lg ">
+                <div class="container-fluid">
+
+                    <button class="navbar-toggler bg-light-subtle" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link" aria-current="page" href="#home">Home</a>
+                            <a class="nav-link" href="#projects">Projects</a>
+                            <a class="nav-link" href="#skills">Skills</a>
+                            <a class="nav-link" href="#contactme">ContactMe</a>
+                            <a class="nav-link" href="#Extras">Extras</a>
+                        </div>
+                    </div>
+                </div>
+            </nav>
         </div>
+
+
+
     </header>
 
-    <section class="home">
+    <section class="home" id="home">
         <div class="aboutme">
             <h2>Hi, I'm Suleiman<br><span>Fullstack Developer</span></h2>
-            <h3>game changer in this medium</h3>
-            <a class="btn-1" href="#">Contact Me</a>
+            <h3>game changer in this area</h3>
+            <a class="btn-1" href="#contactme">Contact Me</a>
             <div class="social">
-                <a href="#"><i class="bi bi-github"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
-                <a href="#"><i class="bi bi-instagram"></i></a>
-                <a href="#"><i class="bi bi-facebook"></i></a>
+                <a href="https://github.com/SuleimanKh97" target="_blank"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/suleiman-khashashneh-678333310/" target="_blank"><i
+                        class="bi bi-linkedin"></i></a>
+                <a href="https://www.instagram.com/eng.khashashneh" target="_blank"><i class="bi bi-instagram"></i></a>
+                <a href="https://www.facebook.com/eng.khashashneh" target="_blank"><i class="bi bi-facebook"></i></a>
             </div>
         </div>
     </section>
 
     <section class="cards" id="projects">
-        <div class="title">
-            <h2>Projects</h2>
-        </div>
+        <div class="title">Projects</div>
         <div class="content">
             <div class="projectcard">
                 <div class="projectimg">
@@ -49,7 +66,9 @@
                 <div class="projectinfo">
                     <div class="namelink">
                         <h3>E-BOOK</h3>
-                        <a href="#">See Details</a>
+                        <a href="https://www.figma.com/design/LtyZBEaxV8Bh4navU9DDUx/project%231%2Cbook-library?node-id=0-1&p=f&t=ZmCibfUmKY00A1HL-0"
+                            target="_blank">See
+                            Details</a>
                     </div>
                     <p>E-book is library in the cloud give the user the same experience as the classic library </p>
                 </div>
@@ -61,7 +80,7 @@
                 <div class="projectinfo">
                     <div class="namelink">
                         <h3>portfolio</h3>
-                        <a href="#">See Details</a>
+                        <a href="https://github.com/SuleimanKh97/portfoilo/tree/main" target="_blank">See Details</a>
                     </div>
                     <p>E-book is library in the cloud give the user the same experience as the classic library </p>
                 </div>
@@ -91,7 +110,67 @@
         <div class="content">
             <div class="skillcard">
                 <div class="skillicon">
-                    <div class="icon"><i class="bi bi-4-square-fill"></i></div>
+                    <div class="icon"><i class="bi bi-front"></i></div>
+                </div>
+                <div class="projectinfo">
+                    <div class="iconlink">
+                        <h3>Front-end Development</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="skillcard">
+                <div class="skillicon">
+                    <div class="icon"><i class="bi bi-git"></i></div>
+                </div>
+                <div class="projectinfo">
+                    <div class="iconlink">
+                        <h3>Version Control</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="skillcard">
+                <div class="skillicon">
+                    <div class="icon"><i class="bi bi-alarm"></i></div>
+                </div>
+                <div class="projectinfo">
+                    <div class="iconlink">
+                        <h3>Time Management</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="skillcard">
+                <div class="skillicon">
+                    <div class="icon"><i class="bi bi-airplane-engines"></i></div>
+                </div>
+                <div class="projectinfo">
+                    <div class="iconlink">
+                        <h3>Adaptability</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="skillcard">
+                <div class="skillicon">
+                    <div class="icon"><i class="bi bi-people-fill"></i></div>
+                </div>
+                <div class="projectinfo">
+                    <div class="iconlink">
+                        <h3>Collaboration</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="skillcard">
+                <div class="skillicon">
+                    <div class="icon"><i class="bi bi-book-half"></i></div>
+                </div>
+                <div class="projectinfo">
+                    <div class="iconlink">
+                        <h3>Continuous Learning</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="skillcard">
+                <div class="skillicon">
+                    <div class="icon"><i class="bi bi-gear"></i></div>
                 </div>
                 <div class="projectinfo">
                     <div class="iconlink">
@@ -101,71 +180,11 @@
             </div>
             <div class="skillcard">
                 <div class="skillicon">
-                    <div class="icon"><i class="bi bi-4-square-fill"></i></div>
+                    <div class="icon"><i class="bi bi-microsoft-teams"></i></div>
                 </div>
                 <div class="projectinfo">
                     <div class="iconlink">
-                        <h3>Problem Solving</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="skillcard">
-                <div class="skillicon">
-                    <div class="icon"><i class="bi bi-4-square-fill"></i></div>
-                </div>
-                <div class="projectinfo">
-                    <div class="iconlink">
-                        <h3>Problem Solving</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="skillcard">
-                <div class="skillicon">
-                    <div class="icon"><i class="bi bi-4-square-fill"></i></div>
-                </div>
-                <div class="projectinfo">
-                    <div class="iconlink">
-                        <h3>Problem Solving</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="skillcard">
-                <div class="skillicon">
-                    <div class="icon"><i class="bi bi-4-square-fill"></i></div>
-                </div>
-                <div class="projectinfo">
-                    <div class="iconlink">
-                        <h3>Problem Solving</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="skillcard">
-                <div class="skillicon">
-                    <div class="icon"><i class="bi bi-4-square-fill"></i></div>
-                </div>
-                <div class="projectinfo">
-                    <div class="iconlink">
-                        <h3>Problem Solving</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="skillcard">
-                <div class="skillicon">
-                    <div class="icon"><i class="bi bi-4-square-fill"></i></div>
-                </div>
-                <div class="projectinfo">
-                    <div class="iconlink">
-                        <h3>Problem Solving</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="skillcard">
-                <div class="skillicon">
-                    <div class="icon"><i class="bi bi-4-square-fill"></i></div>
-                </div>
-                <div class="projectinfo">
-                    <div class="iconlink">
-                        <h3>Problem Solving</h3>
+                        <h3>Communication</h3>
                     </div>
                 </div>
             </div>
@@ -184,7 +203,7 @@
                 <label for="email">Email:</label>
                 <input type="email" name="email" id="email" placeholder="Enter Your Email" required>
                 <label for="message">Your Message:</label>
-                <textarea name="message" id=""></textarea>
+                <textarea name="message" id="textarea" placeholder="Enter Your Message"></textarea>
                 <input class="btn-2" type="submit" value="Send">
             </fieldset>
         </form>
@@ -204,90 +223,48 @@
         </div> -->
     </section>
 
-    <section class="skillcards" id="skills">
-        <div class="title">Skills</div>
-
+    <section class="extracards" id="Extras">
+        <div class="title">
+            engineering expertise
+        </div>
         <div class="content">
-            <div class="skillcard">
-                <div class="skillicon">
-                    <div class="icon"><i class="bi bi-4-square-fill"></i></div>
+            <div class="extracard">
+                <div class="projectimg">
+                    <img src="/img/project1.png" alt="">
                 </div>
                 <div class="projectinfo">
-                    <div class="iconlink">
-                        <h3>Problem Solving</h3>
+                    <div class="namelink">
+                        <h3>E-BOOK</h3>
+                        <a href="#">See Details</a>
                     </div>
+                    <p>E-book is library in the cloud give the user the same experience as the classic library </p>
                 </div>
             </div>
-            <div class="skillcard">
-                <div class="skillicon">
-                    <div class="icon"><i class="bi bi-4-square-fill"></i></div>
+            <div class="extracard">
+                <div class="projectimg">
+                    <img src="/img/project1.png" alt="">
                 </div>
                 <div class="projectinfo">
-                    <div class="iconlink">
-                        <h3>Problem Solving</h3>
+                    <div class="namelink">
+                        <h3>E-BOOK</h3>
+                        <a href="#">See Details</a>
                     </div>
+                    <p>E-book is library in the cloud give the user the same experience as the classic library </p>
                 </div>
             </div>
-            <div class="skillcard">
-                <div class="skillicon">
-                    <div class="icon"><i class="bi bi-4-square-fill"></i></div>
+            <div class="extracard">
+                <div class="projectimg">
+                    <img src="/img/project1.png" alt="">
                 </div>
                 <div class="projectinfo">
-                    <div class="iconlink">
-                        <h3>Problem Solving</h3>
+                    <div class="namelink">
+                        <h3>E-BOOK</h3>
+                        <a href="#">See Details</a>
                     </div>
+                    <p>E-book is library in the cloud give the user the same experience as the classic library </p>
                 </div>
             </div>
-            <div class="skillcard">
-                <div class="skillicon">
-                    <div class="icon"><i class="bi bi-4-square-fill"></i></div>
-                </div>
-                <div class="projectinfo">
-                    <div class="iconlink">
-                        <h3>Problem Solving</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="skillcard">
-                <div class="skillicon">
-                    <div class="icon"><i class="bi bi-4-square-fill"></i></div>
-                </div>
-                <div class="projectinfo">
-                    <div class="iconlink">
-                        <h3>Problem Solving</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="skillcard">
-                <div class="skillicon">
-                    <div class="icon"><i class="bi bi-4-square-fill"></i></div>
-                </div>
-                <div class="projectinfo">
-                    <div class="iconlink">
-                        <h3>Problem Solving</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="skillcard">
-                <div class="skillicon">
-                    <div class="icon"><i class="bi bi-4-square-fill"></i></div>
-                </div>
-                <div class="projectinfo">
-                    <div class="iconlink">
-                        <h3>Problem Solving</h3>
-                    </div>
-                </div>
-            </div>
-            <div class="skillcard">
-                <div class="skillicon">
-                    <div class="icon"><i class="bi bi-4-square-fill"></i></div>
-                </div>
-                <div class="projectinfo">
-                    <div class="iconlink">
-                        <h3>Problem Solving</h3>
-                    </div>
-                </div>
-            </div>
+
         </div>
 
     </section>
@@ -296,11 +273,11 @@
         <div class="footer1">
             <div class="logo"><a href="#">Suleiman</a></div>
             <div class="nav">
-                <a href="#">Home</a>
+                <a href="#home">Home</a>
                 <a href="#projects">Projects</a>
                 <a href="#skills">Skills</a>
-                <a href="#">ContactMe</a>
-                <a href="#">Extras</a>
+                <a href="#contactme">ContactMe</a>
+                <a href="#Extras">Extras</a>
             </div>
             <div class="map">
                 <iframe
