--- a/main.html
+++ b/main.html
@@ -54,6 +54,9 @@
                 <a href="https://www.facebook.com/eng.khashashneh" target="_blank"><i class="bi bi-facebook"></i></a>
             </div>
         </div>
+        <div class="heropic">
+            <img src="/img/file.png" alt="">
+        </div>
     </section>
 
     <section class="cards" id="projects">
