--- a/main.html
+++ b/main.html
@@ -27,9 +27,9 @@
                     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                         <div class="navbar-nav">
                             <a class="nav-link" aria-current="page" href="#home">Home</a>
+                            <a class="nav-link" href="#contactme">ContactMe</a>
                             <a class="nav-link" href="#projects">Projects</a>
                             <a class="nav-link" href="#skills">Skills</a>
-                            <a class="nav-link" href="#contactme">ContactMe</a>
                             <a class="nav-link" href="#Extras">Extras</a>
                         </div>
                     </div>
@@ -43,8 +43,12 @@
 
     <section class="home" id="home">
         <div class="aboutme">
-            <h2>Hi, I'm Suleiman<br><span>Fullstack Developer</span></h2>
-            <h3>game changer in this area</h3>
+            <h2>Hi, I'm Suleiman<br><span>Fullstack Web Developer</span></h2>
+            <!-- <h3>game changer in this area</h3> -->
+            <p>"Skilled Full Stack Developer, leveraging my technical expertise to build
+                dynamic, user-friendly, and efficient web applications. I am committed to continuous learning and
+                staying updated with the latest technologies to deliver innovative solutions and contribute to the
+                success of forward-thinking teams."</p>
             <a class="btn-1" href="#contactme">Contact Me</a>
             <div class="social">
                 <a href="https://github.com/SuleimanKh97" target="_blank"><i class="bi bi-github"></i></a>
@@ -78,19 +82,20 @@
             </div>
             <div class="projectcard">
                 <div class="projectimg">
-                    <img src="/img/project1.png" alt="">
+                    <img src="/img/Screenshot 2024-12-23 084339.png" alt="">
                 </div>
                 <div class="projectinfo">
                     <div class="namelink">
                         <h3>portfolio</h3>
                         <a href="https://github.com/SuleimanKh97/portfoilo/tree/main" target="_blank">See Details</a>
                     </div>
-                    <p>E-book is library in the cloud give the user the same experience as the classic library </p>
+                    <p>Portfolios are a great way to demonstrate the competencies and accomplishments you would list on
+                        a resume or talk about in an interview</p>
                 </div>
             </div>
             <div class="projectcard">
                 <div class="projectimg">
-                    <img src="/img/project1.png" alt="">
+                    <img src="/img/3-Figure3-1.png" alt="">
                 </div>
                 <div class="projectinfo">
                     <div class="namelink">
@@ -194,10 +199,97 @@
         </div>
 
     </section>
+    <section class="coursescards" id="skills">
+        <div class="title">Courses</div>
+
+        <div class="content">
+            <div class="coursescard">
+                <div class="skillicon">
+                    <div class="icon"><i class="bi bi-filetype-html"></i></div>
+                </div>
+                <div class="projectinfo">
+                    <div class="iconlink">
+                        <h3>HTML</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="coursescard">
+                <div class="skillicon">
+                    <div class="icon"><i class="bi bi-filetype-css"></i></div>
+                </div>
+                <div class="projectinfo">
+                    <div class="iconlink">
+                        <h3>CSS</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="coursescard">
+                <div class="skillicon">
+                    <div class="icon"><i class="bi bi-filetype-js"></i></div>
+                </div>
+                <div class="projectinfo">
+                    <div class="iconlink">
+                        <h3>JavaScript</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
+    <section class="extracards" id="Extras">
+        <div class="title">
+            References
+        </div>
+        <div class="content">
+            <div class="extracard">
+                <div class="extraimg">
+                    <img src="https://media.licdn.com/dms/image/v2/D4E03AQEpwmLfBWVjHw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1702923720789?e=1740614400&v=beta&t=nkEx0-g_JpTYlQC4CwyJt6hNxfcbNolO04C6_l3Vxzs"
+                        alt="">
+                </div>
+                <div class="projectinfo">
+                    <div class="namelink">
+                        <h3>Mohammed Frehat</h3>
+                        <a href="https://www.linkedin.com/in/mohammed-frehat-9222402b/">Profile</a>
+                    </div>
+                    <p>Coding Academy Manager</p>
+                </div>
+            </div>
+            <div class="extracard">
+                <div class="extraimg">
+                    <img src="https://media.licdn.com/dms/image/v2/D4D03AQHzTJ-gk_BKOw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1691245063093?e=1740614400&v=beta&t=FHdObsx9HvpEl7gdOFv0xsJsgLATf4Vfu5jOvjgTJAo"
+                        alt="">
+                </div>
+                <div class="projectinfo">
+                    <div class="namelink">
+                        <h3>Ayman Al-Jaradat</h3>
+                        <a href="https://www.linkedin.com/in/ayman-aljaradat/">Profile</a>
+                    </div>
+                    <p>Software Engineer | Lead Trainer at Orange Coding Academy</p>
+                </div>
+            </div>
+            <div class="extracard">
+                <div class="extraimg">
+                    <img src="https://media.licdn.com/dms/image/v2/D4E03AQHPavOJrAlApg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1673085050200?e=1740614400&v=beta&t=RN9YyRh9yDz4rBBemQAY2JQwQ_BGnRCjj1fxQ7hT7yc"
+                        alt="">
+                </div>
+                <div class="projectinfo">
+                    <div class="namelink">
+                        <h3>Batool Walid</h3>
+                        <a href="https://www.linkedin.com/in/batool-walid-b33894228/">Profile</a>
+                    </div>
+                    <p>Angular and .net core || Full Stack Web Development</p>
+                </div>
+            </div>
+
+
+
+        </div>
+
+    </section>
 
     <section class="contactme" id="contactme">
         <div class="title">Contact Me</div>
-
+        <!-- <div class="part1"> -->
         <form action="#">
             <fieldset>
                 <legend>Get In Touch</legend>
@@ -210,7 +302,29 @@
                 <input class="btn-2" type="submit" value="Send">
             </fieldset>
         </form>
-
+        <!-- </div>
+        <div class="part2">
+            <div class="skillcard">
+                <div class="skillicon">
+                    <div class="icon"><i class="bi bi-front"></i></div>
+                </div>
+                <div class="projectinfo">
+                    <div class="iconlink">
+                        <h3>Front-end Development</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="skillcard">
+                <div class="skillicon">
+                    <div class="icon"><i class="bi bi-front"></i></div>
+                </div>
+                <div class="projectinfo">
+                    <div class="iconlink">
+                        <h3>Front-end Development</h3>
+                    </div>
+                </div>
+            </div>
+        </div> -->
         <!-- <div class="content">
             <div class="contactcard">
                 <div class="contacticon">
@@ -232,18 +346,32 @@
         </div>
         <div class="content">
             <div class="extracard">
-                <div class="projectimg">
-                    <img src="/img/project1.png" alt="">
+                <div class="extraimg">
+                    <img src="/img/UNDP-Logo-Blue-Large-Transparent.png" alt="">
                 </div>
                 <div class="projectinfo">
                     <div class="namelink">
-                        <h3>E-BOOK</h3>
-                        <a href="#">See Details</a>
+                        <h3>Energy Efciency Consultant</h3>
+                        <!-- <a href="#">See Details</a> -->
                     </div>
-                    <p>E-book is library in the cloud give the user the same experience as the classic library </p>
+                    <p>Conducted field visits to assess energy efciency elements and compliance with national
+                        codes.</p>
                 </div>
             </div>
             <div class="extracard">
+                <div class="extraimg1">
+                    <img src="/img/20-1.jpg" alt="">
+                </div>
+                <div class="projectinfo">
+                    <div class="namelink">
+                        <h3>site engineer</h3>
+                        <!-- <a href="#">See Details</a> -->
+                    </div>
+                    <p>The technical, nancial and administrative advisor for all the municipal councils, and
+                        supervises</p>
+                </div>
+            </div>
+            <!-- <div class="extracard">
                 <div class="projectimg">
                     <img src="/img/project1.png" alt="">
                 </div>
@@ -254,19 +382,7 @@
                     </div>
                     <p>E-book is library in the cloud give the user the same experience as the classic library </p>
                 </div>
-            </div>
-            <div class="extracard">
-                <div class="projectimg">
-                    <img src="/img/project1.png" alt="">
-                </div>
-                <div class="projectinfo">
-                    <div class="namelink">
-                        <h3>E-BOOK</h3>
-                        <a href="#">See Details</a>
-                    </div>
-                    <p>E-book is library in the cloud give the user the same experience as the classic library </p>
-                </div>
-            </div>
+            </div> -->
 
         </div>
 
@@ -277,9 +393,9 @@
             <div class="logo"><a href="#">Suleiman</a></div>
             <div class="nav">
                 <a href="#home">Home</a>
+                <a href="#contactme">ContactMe</a>
                 <a href="#projects">Projects</a>
                 <a href="#skills">Skills</a>
-                <a href="#contactme">ContactMe</a>
                 <a href="#Extras">Extras</a>
             </div>
             <div class="map">
