--- a/main.html
+++ b/main.html
@@ -243,8 +243,7 @@
         <div class="content">
             <div class="extracard">
                 <div class="extraimg">
-                    <img src="https://media.licdn.com/dms/image/v2/D4E03AQEpwmLfBWVjHw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1702923720789?e=1740614400&v=beta&t=nkEx0-g_JpTYlQC4CwyJt6hNxfcbNolO04C6_l3Vxzs"
-                        alt="">
+                    <img src="/img/1702923720789.jpeg" alt="">
                 </div>
                 <div class="projectinfo">
                     <div class="namelink">
@@ -256,8 +255,7 @@
             </div>
             <div class="extracard">
                 <div class="extraimg">
-                    <img src="https://media.licdn.com/dms/image/v2/D4D03AQHzTJ-gk_BKOw/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1691245063093?e=1740614400&v=beta&t=FHdObsx9HvpEl7gdOFv0xsJsgLATf4Vfu5jOvjgTJAo"
-                        alt="">
+                    <img src="/img/1691245063093.jpeg" alt="">
                 </div>
                 <div class="projectinfo">
                     <div class="namelink">
@@ -269,8 +267,7 @@
             </div>
             <div class="extracard">
                 <div class="extraimg">
-                    <img src="https://media.licdn.com/dms/image/v2/D4E03AQHPavOJrAlApg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1673085050200?e=1740614400&v=beta&t=RN9YyRh9yDz4rBBemQAY2JQwQ_BGnRCjj1fxQ7hT7yc"
-                        alt="">
+                    <img src="img/1673085050200.jpeg" alt="">
                 </div>
                 <div class="projectinfo">
                     <div class="namelink">
