--- a/main.html
+++ b/main.html
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="heropic">
-            <img src="/img/file.png" alt="">
+            <img src="./img/file.png" alt="">
         </div>
     </section>
 
@@ -68,7 +68,7 @@
         <div class="content">
             <div class="projectcard">
                 <div class="projectimg">
-                    <img src="/img/project1.png" alt="">
+                    <img src="./img/project1.png" alt="">
                 </div>
                 <div class="projectinfo">
                     <div class="namelink">
@@ -82,7 +82,7 @@
             </div>
             <div class="projectcard">
                 <div class="projectimg">
-                    <img src="/img/Screenshot 2024-12-23 084339.png" alt="">
+                    <img src="./img/Screenshot 2024-12-23 084339.png" alt="">
                 </div>
                 <div class="projectinfo">
                     <div class="namelink">
@@ -95,7 +95,7 @@
             </div>
             <div class="projectcard">
                 <div class="projectimg">
-                    <img src="/img/3-Figure3-1.png" alt="">
+                    <img src="./img/3-Figure3-1.png" alt="">
                 </div>
                 <div class="projectinfo">
                     <div class="namelink">
@@ -243,7 +243,7 @@
         <div class="content">
             <div class="extracard">
                 <div class="extraimg">
-                    <img src="/img/1702923720789.jpeg" alt="">
+                    <img src="./img/1702923720789.jpeg" alt="">
                 </div>
                 <div class="projectinfo">
                     <div class="namelink">
@@ -255,7 +255,7 @@
             </div>
             <div class="extracard">
                 <div class="extraimg">
-                    <img src="/img/1691245063093.jpeg" alt="">
+                    <img src="./img/1691245063093.jpeg" alt="">
                 </div>
                 <div class="projectinfo">
                     <div class="namelink">
@@ -344,7 +344,7 @@
         <div class="content">
             <div class="extracard">
                 <div class="extraimg">
-                    <img src="/img/UNDP-Logo-Blue-Large-Transparent.png" alt="">
+                    <img src="img/UNDP-Logo-Blue-Large-Transparent.png" alt="">
                 </div>
                 <div class="projectinfo">
                     <div class="namelink">
@@ -357,7 +357,7 @@
             </div>
             <div class="extracard">
                 <div class="extraimg1">
-                    <img src="/img/20-1.jpg" alt="">
+                    <img src="img/20-1.jpg" alt="">
                 </div>
                 <div class="projectinfo">
                     <div class="namelink">
